kubernetes/gcp/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: shieldrule-api
  name: shieldrule-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shieldrule-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: shieldrule-api
    spec:
      containers:
        - image: us-west1-docker.pkg.dev/shieldrule-dev-project/shieldrule-dev-api/api:dev
          name: shieldrule-api
          ports:
            - containerPort: 8000
          resources: {}
          securityContext:
            capabilities:
              drop:
                - all
      restartPolicy: Always
status: {}
