kubernetes/gcp/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shieldrule-api-ingress
  annotations:
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.global-static-ip-name: shieldrule-api
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: "api-gcp.usemodernlogic.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: shieldrule-api
                port:
                  number: 80
